--- a/mediawiki-playbook.yml
+++ b/mediawiki-playbook.yml
@@ -3,24 +3,47 @@
   become: true
 
   tasks:
+    - name: adding php repository
+      command: add-apt-repository ppa:ondrej/php
+
     - name: Install Application prerequisites
       apt:
         name:
          - apache2
-         - mysql-server 
-         - php7.3
-         - php-mysqli
+         - python-pip
+         - mysql-server
+         - php7.4
+         - php7.4-mysql
          - libapache2-mod-php
-         - php-xml
-         - php-mbstring
-         - php-apcu 
-         - php-intl 
-         - imagemagick  
-         - inkscape 
-         - php-gd 
-         - php-cli 
-         - php-curl 
+         - php7.4-xml
+         - php7.4-mbstring
+         - php-apcu
+         - php-intl
+         - imagemagick
+         - inkscape
+         - php-gd
+         - php-cli
+         - php-curl
          - git
+         - unzip
+
+
+    #- name: install php7.3-mbstring
+    #  command: apt install php7.4-mbstring
+
+  #  - name: install xml
+    #  command: apt install php7.4-xml
+
+    - name: Install
+      command: phpenmod mbstring xml
+
+  #  - name: install python3-pip
+  #    command: apt install python-pip
+
+    - name: Make sure pymysql is present
+      pip:
+        name: pymysql
+        state: present
 
     - name: Start service mysqld, if not started
       service:
@@ -40,7 +63,7 @@
        host: localhost
        state: present
        update_password: on_create
-       priv: '*.*:ALL,GRANT' 
+       priv: '*.*:ALL,GRANT'
        login_unix_socket: /var/run/mysqld/mysqld.sock
 
     - name: Create user with password, all database privileges and 'WITH GRANT OPTION' in db1 and db2
@@ -59,17 +82,18 @@
         - mysql
 
     - name: command module
-      command: wget https://releases.wikimedia.org/mediawiki/1.35/mediawiki-1.35.0.tar.gz 
+      command: wget https://releases.wikimedia.org/mediawiki/1.35/mediawiki-1.35.0.tar.gz
 
 
     - name: Extract mediawiki-1.35.0.tar.gz /var/www/
       unarchive:
-        src: mediawiki-1.35.0.tar.gz
+        src: /home/ubuntu/thoughtworks-app/mediawiki-1.35.0.tar.gz
         dest: /var/www/
-        remote_src: yes  
+        remote_src: yes
+
+    - name: Rename
+      command: mv /var/www/mediawiki-1.35.0 /var/www/mediawiki
 
     - name: Run the command if the specified file does not exist.
       command: ln -s /var/www/mediawiki /var/www/html/mediawiki
-
-
 
